--- a/1-Les-bases-du-CSS/01-Notions-de-depart/03-Couleurs/style.css
+++ b/1-Les-bases-du-CSS/01-Notions-de-depart/03-Couleurs/style.css
@@ -1,3 +1,32 @@
 body {
-  background: #333;
+    background: #f1f1f1;
+}
+
+.box {
+    width: 250px;
+    height: 250px;
+    /* Les couleurs */
+
+    /* named color */
+    background-color: salmon;
+
+    /* Red Green Blue (RGB) */
+    background-color: rgb(250, 128, 114);
+
+    /* Red Green Blue alpha(RGBa) a pour opacitée */
+    background-color: rgb(250, 128, 114, 0.3);
+
+    /* Hexadecimal */
+    /* [0-9] [a-f] */
+    background-color: #fa8072;
+
+    /* HSL */
+    background-color: hsl(11, 47%, 52%);
+
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
+    border: 10px solid blue;
+}
+
+h1 {
+    color: #000;
 }
