--- a/1-Les-bases-du-CSS/01-Notions-de-depart/07-Display/style.css
+++ b/1-Les-bases-du-CSS/01-Notions-de-depart/07-Display/style.css
@@ -1,20 +1,34 @@
 p {
-  background-color: royalblue;
-  color: #f1f1f1;
-  font-size: 45px;
-  /* Valeur de base pour un <p> */
+    background-color: royalblue;
+    color: #f1f1f1;
+    font-size: 45px;
 
-  /* Transformation en ligne */
+    /* Valeur de base pour un <p> */
+    display: block;
 
-  /* Mix des deux */
+    /* Transformation en ligne */
+    display: inline;
 
-  /* Disparation visuelle, mais reste dans le DOM */
+    /* Mix des deux */
+    display: inline-block;
+    width: 500px;
+    height: 250px;
+    padding: 50px;
+
+    /* Disparation visuelle, mais reste dans le DOM */
+    /*display: none;*/
 }
 
 span {
-  background: green;
-  color: #f1f1f1;
-  font-size: 45px;
+    background: green;
+    color: #f1f1f1;
+    font-size: 45px;
 
-  /* On peut changer le display de tous les élémens */
+    /* On peut changer le display de tous les élémens */
+    display: block;
+}
+
+button {
+    min-width: 150px;
+    padding: 12px 5px;
 }
