--- a/1-Les-bases-du-CSS/03-Texte/01-Les-proprietes-du-texte/style.css
+++ b/1-Les-bases-du-CSS/03-Texte/01-Les-proprietes-du-texte/style.css
@@ -1,19 +1,54 @@
 body {
-  background-color: #333;
-  color: cornsilk;
+    background-color: #333;
+    color: cornsilk;
 }
 
 /* Titre */
-
+h1 {
+    text-align: center;
+    font-size: 45px;
+    letter-spacing: 5px;
+    font-weight: 300;
+}
 
 
 /* Lien */
-
-
+a {
+    color: #f1f1f1;
+    text-decoration: underline red;
+    text-underline-offset: 10px;
+    text-decoration-thickness: 10px;
+    background: green;
+    cursor: pointer;
+}
 
 /* Paragraphe */
+p {
+    font-size: 16px;
+    /* hauteur de ligne */
+    line-height: 1.4;
+    text-transform: uppercase;
+    /* On evite */
+    /* text-align: justify; */
+    max-width: 600px;
+    margin: 0 auto;
+}
 
-
-  
 /* Listes */
+ul {
+    /*list-style-type: "Hello";*/
+    /*list-style-image: url("./ressources/basketball.svg");*/
+    list-style: "Hello" url("./ressources/basketball.svg");
+}
 
+ol {
+    list-style: upper-roman;
+}
+
+ul li {
+    padding-left: 20px;
+}
+
+li::marker {
+    font-size: 30px;
+}
