--- a/1-Les-bases-du-CSS/02-Medias/02-Styliser-une-video/style.css
+++ b/1-Les-bases-du-CSS/02-Medias/02-Styliser-une-video/style.css
@@ -1,6 +1,17 @@
 *, ::before, ::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html, body {
+    height: 100%;
+}
+
+video {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
