--- a/1-Les-bases-du-CSS/Exercices/Exercices-corriges/01-Coder-un-bouton/style.css
+++ b/1-Les-bases-du-CSS/Exercices/Exercices-corriges/01-Coder-un-bouton/style.css
@@ -1,16 +1,17 @@
 body {
-  padding-top: 250px; 
-  text-align: center;
+    padding-top: 250px;
+    text-align: center;
 }
 
 .btn {
-  border: none;
-  border-radius: 5px;
-  font-size: 16px; 
-  background-color: #4676D7;
-  color: #fff;
-  padding: 10px 16px;
-  cursor: pointer;
-  text-transform: uppercase;
-  min-width: 135px;
+    border: none;
+    border-radius: 5px;
+    /* taille de base pour du texte button ou lien */
+    font-size: 16px;
+    background-color: #4676D7;
+    color: #fff;
+    padding: 10px 16px;
+    cursor: pointer;
+    text-transform: uppercase;
+    min-width: 135px;
 }
